--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -16,6 +16,7 @@
         <script src="js/webvr-manager.js"></script>
         <script src="js/MTLLoader.js"></script>
         <script src="js/OBJLoader.js"></script>
+        <script src="js/stats.min.js"></script>
         <script src="js/mainpage.js"></script>
     </body>
 </html>
